tests/rascal/negative/name_errors/L1/4_undecl-var.ob
MODULE Bla;

BEGIN
  x := 1
END Bla.